@@ -55,6 +55,17 @@
   doi = {10.4018/9781605660103.ch035}
 }
 
+@misc{fearnhead2016cpd,
+  doi = {10.48550/ARXIV.1609.07363},
+  url = {https://arxiv.org/abs/1609.07363},
+  author = {Fearnhead, Paul and Rigaill, Guillem},
+  keywords = {Methodology (stat.ME), Applications (stat.AP), Computation (stat.CO), Machine Learning (stat.ML), FOS: Computer and information sciences, FOS: Computer and information sciences},
+  title = {Changepoint Detection in the Presence of Outliers},
+  publisher = {arXiv},
+  year = {2016},
+  copyright = {arXiv.org perpetual, non-exclusive license}
+}
+
 @article{boente2002decomp,
   author = {Boente, Graciela and Pires, Ana},
   year = {2002},
