@@ -5,6 +5,7 @@ numpy>=1.13
 pandas
 pyclustering
 pyod
+ruptures
 scipy>=1.3.1
 scikit-learn>=0.20.0
 scikit-lego
